# PRAVESH_BACKEND

./: create_tabels.py  pyproject.toml  requirements.txt  schema.json
app/: main.py
app/api/: auth_router.py  decrpyt_qr_router.py  decrypt_qr.py  log_leave_router.py  log_same_day_router.py  user_router.py
app/api/v1/: auth_routes.py
app/auth/: dependencies.py  jwt.py  routes.py  schemas.py
app/core/: auth.py  config.py
app/crud/: log_crud.py  log_leave_crud.py  log_same_day_crud.py  user_crud.py
app/db/: base.py  database.py  models.py  schemas.py  session.py
app/db/models/: log_leave.py  log_same_day.py  user.py
app/schemas/: log_leave_schema.py  log_same_day_schema.py  user_schema.py
app/utils/: crypto_utils.py
testing/: database_test.py  main.py  test.ipynb
